--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <p class="example-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quae sint blanditiis quasi! Commodi qui suscipit distinctio, fugit, assumenda, consectetur perspiciatis consequuntur asperiores necessitatibus eum cupiditate quisquam quae? Vero, id.</p>
+    <p class="example-2">Dolore nihil ullam porro, illum aliquam tempora incidunt vitae labore temporibus animi minima inventore voluptates quis eaque reiciendis mollitia possimus. Accusantium nihil aliquid architecto similique. Dignissimos aut sapiente quasi quisquam.</p>
+    <p class="example-3">Facilis, eos nemo labore harum enim explicabo quasi deserunt quia, deleniti nobis eius ex? Quisquam aut delectus neque facilis sint, eos officia corporis fugit vel eveniet quasi, tempora itaque quidem?</p>
+
+    <button data-popover="This item costs $50.">
+      Add to cart
+    </button>
+
+    <a href="#" data-popover="This removes item from cart">
+      Remove from cart
+    </a>
+  </body>
 </html>
