--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <p class="example-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quae sint blanditiis quasi! Commodi qui suscipit distinctio, fugit, assumenda, consectetur perspiciatis consequuntur asperiores necessitatibus eum cupiditate quisquam quae? Vero, id.</p>
-    <p class="example-2">Dolore nihil ullam porro, illum aliquam tempora incidunt vitae labore temporibus animi minima inventore voluptates quis eaque reiciendis mollitia possimus. Accusantium nihil aliquid architecto similique. Dignissimos aut sapiente quasi quisquam.</p>
-    <p class="example-3">Facilis, eos nemo labore harum enim explicabo quasi deserunt quia, deleniti nobis eius ex? Quisquam aut delectus neque facilis sint, eos officia corporis fugit vel eveniet quasi, tempora itaque quidem?</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <p class="example-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsa dolorum quos dignissimos. Aut unde ullam modi optio tempore maiores pariatur, itaque animi veniam dicta repellendus libero sapiente ducimus suscipit.</p>
+  <p class="example-2">Molestiae labore autem, officiis nihil animi totam error soluta voluptatum officia eaque eligendi eius dicta alias eveniet sequi fuga iste atque minima. Impedit facilis ratione ex eos nobis consectetur aut.</p>
+  <p class="example-3">Corporis, mollitia qui. Inventore quisquam nobis quibusdam repudiandae beatae laborum et distinctio deserunt recusandae, consequatur quam ipsa asperiores, natus animi iste ad minus numquam deleniti a soluta, consequuntur ducimus! Fugit?</p>
 
-    <button data-popover="This item costs $50.">
-      Add to cart
-    </button>
-
-    <a href="#" data-popover="This removes item from cart">
-      Remove from cart
-    </a>
-  </body>
+  <button data-popover="This item costs $50.">Add to cart</button>
+  <a href="#" data-popover="This removes item from cart">This removes item from cart</a>
+</body>
 </html>
